# trading-bot

./: .env  .gitignore  ACCOUNT_VERIFICATION_GUIDE.md  API_README.md  CHANGELOG.md  CLEANUP_SUMMARY.md  Cargo.toml  DEPLOYMENT_README.md  DEV_DIARY.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  JSON_STREAM_TESTING.md  MONITOR_README.md  MULTI_MODEL_CONVERSATIONS.md  PROTOBUF_FIX.md  README.md  THREADING_OPTIMIZATION.md  ULTRA_FAST_DEFAULT.md  ULTRA_THREADING_IMPLEMENTATION.md  VM_SETUP.md  bash.exe.stackdump  build-linux.sh  build.rs  cloud-init-template.yml  config.env  debug_file_watching.sh  demo_api.md  deploy_trading_bot.sh  fix_protobuf.sh  install.ps1  live_config.env  monitor_trading_account.bat  monitor_trading_account.ps1  quick_ollama_test.sh  restart_with_fixes.sh  run_tests.sh  sample_data.json  scripts.sh  setup_api_keys.sh  setup_linux.sh  (+14 more)
bot/: deploy_trading_bot.sh
live_data/: crypto_data_btc.json  crypto_data_eth.json  crypto_stream.json  news_data_aapl.json  news_data_spy.json  news_stream.json  options_data_spy.json  options_stream.json  stock_data_aapl.json  stocks_stream.json
proto/: receipt.proto
sandbox_data/: paper_trading_portfolio.json  trading_account.json
scripts/: README.md  find_rust.sh  fix_npm_version.sh  fix_protobuf.sh  monitor_streams.sh  run_all_tests.sh  setup_api_keys.sh  start_live_mode.sh  start_simulated_stream.sh  stop_simulated_stream.sh  switch_mode.sh  test_account_verification.sh  test_enhanced_json_stream.sh  test_fixes.sh  test_live_mode.sh  test_ollama_json_reading.sh  test_ollama_streaming.sh  test_real_streaming.sh  test_unified_websocket.sh  trading_bot_control.sh  update_api_keys.sh  update_dependencies.sh  watch_stream.sh
setup/: README.md  bootstrap.sh  clone_and_build.sh  complete_setup.sh  full_setup.sh  install.sh  install_dependencies.sh  install_no_git.sh  install_ollama.sh  install_rust.sh  test_installation.sh  update.sh
src/: circuit_breaker.rs  interactive_setup.rs  main.rs  rate_limiter.rs  trading_strategy.rs
src/api/: enhanced_json_stream.rs  handlers.rs  json_stream.rs  mod.rs  server.rs
src/market_data/: account_verifier.rs  asset_universe.rs  market_regime.rs  mod.rs  simulated_stream.rs  streamer.rs  technical_indicators.rs  trading_account.rs  types.rs  unified_websocket.rs
src/ollama/: ai_model_manager.rs  consensus_engine.rs  conversation_manager.rs  mod.rs  ollama_client.rs  ollama_config.rs  ollama_receipt.rs  protobuf_receipt.rs
src/order_execution/: liquidation_manager.rs  mod.rs  order_executor.rs  order_types.rs
src/protobuf/: mod.rs  schema.proto
src/trading_strategy/: adaptive_timing.rs  advanced_indicators.rs  ai_decision_engine.rs  enhanced_decision_engine.rs  market_regime_adaptation.rs  options_integration.rs  sector_rotation.rs
tests/: README.md
tests/deployment/: run_deployment_tests.sh  test_environment.sh
tests/integration/: run_integration_tests.sh  test_json_stream.sh  test_websocket.sh
tests/performance/: run_performance_tests.sh  test_latency.sh
tests/unit/: run_unit_tests.sh
trading_portfolio/: ai_analysis_report.json  asset_universe.json  current_positions.json  enhanced_strategy_recommendations.json  market_regime_analysis.json  portfolio_analysis.json  trading_account.json  trading_portfolio.json
