[package]
name = "trading_bot"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A Rust-based trading bot with Ollama AI integration and protobuf logging"
license = "MIT"
repository = "https://github.com/yourusername/trading_bot"
keywords = ["trading", "bot", "ai", "ollama", "rust", "protobuf"]
categories = ["command-line-utilities", "api-bindings", "data-structures"]

[dependencies]
# Core async runtime
tokio = { version = "1.0", features = ["full"] }

# HTTP client with streaming support
reqwest = { version = "0.11", features = ["json", "stream", "rustls-tls"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Command line interface
clap = { version = "4.0", features = ["derive"] }

# Date and time handling
chrono = { version = "0.4", features = ["serde"] }

# URL handling
url = "2.0"

# Logging
log = "0.4"
env_logger = "0.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Environment variables
dotenv = "0.15"

# UUID generation
uuid = { version = "1.0", features = ["v4", "serde"] }

# System information
num_cpus = "1.0"
sysinfo = "0.29"

# Protobuf dependencies
prost = "0.12"
prost-types = "0.12"
bytes = "1.0"
futures-util = "0.3"

# Async utilities
futures = "0.3"
tokio-stream = "0.1"

# HTTP utilities
http = "0.2"
http-body = "0.4"

# Compression
flate2 = "1.0"
brotli = "3.3"

# Crypto and security
ring = "0.16"
getrandom = "0.2"

# File system operations
walkdir = "2.3"
notify = "6.1"

# Configuration management
config = "0.13"
toml = "0.8"

# Development tools (optional)
cargo-license = { version = "0.5", optional = true }

[dev-dependencies]
# Testing
tokio-test = "0.4"
criterion = "0.5"
proptest = "1.3"

# Mocking
mockall = "0.11"

# Test utilities
tempfile = "3.8"
assert_fs = "1.1"

[build-dependencies]
tonic-build = "0.10"

[features]
default = ["full"]
full = [
    "tokio/full",
    "reqwest/rustls-tls",
    "tracing-subscriber/env-filter",
    "cargo-license",
]
minimal = [
    "tokio/rt",
    "reqwest/json",
    "tracing-subscriber/fmt",
]

[profile.dev]
opt-level = 0
debug = true
strip = false

[profile.release]
opt-level = 3
debug = false
strip = true
lto = true
codegen-units = 1
panic = "abort"

[profile.release.package."*"]
opt-level = 3

[workspace]
members = ["."]
resolver = "2"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.release]
pre-release-commit-message = "chore: prepare for release {{version}}"
tag-message = "{{version}}"
tag-name = "{{version}}" 