[package]
name = "trading_bot"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A Rust-based trading bot with Ollama AI integration and protobuf logging"
license = "MIT"
repository = "https://github.com/yourusername/trading_bot"
keywords = ["trading", "bot", "ai", "ollama", "rust", "protobuf"]
categories = ["command-line-utilities", "api-bindings", "data-structures"]

[dependencies]
# Core async runtime
tokio = { version = "1.0", features = ["full", "rt-multi-thread", "macros", "time", "sync", "net", "io-util"] }

# HTTP client with streaming support
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls", "gzip", "brotli"] }

# High-performance async utilities
tokio-util = { version = "0.7", features = ["codec", "io"] }
tokio-stream = "0.1"
futures-util = { version = "0.3", features = ["std", "sink"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Command line interface
clap = { version = "4.0", features = ["derive"] }

# Date and time handling
chrono = { version = "0.4", features = ["serde"] }

# URL handling
url = "2.0"

# Logging
log = "0.4"
env_logger = "0.11"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Environment variables
dotenv = "0.15"

# UUID generation
uuid = { version = "1.0", features = ["v4", "serde"] }

# System information
num_cpus = "1.0"
sysinfo = "0.37"

# Protobuf dependencies
prost = "0.14"
prost-types = "0.14"
bytes = "1.0"

# Async utilities
futures = "0.3"

# HTTP utilities
http = "1.0"
http-body = "1.0"

# Web framework for API
axum = { version = "0.8", features = ["ws", "macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs"] }

# Compression
flate2 = "1.0"
brotli = "8.0"

# Crypto and security
ring = "0.17"
getrandom = "0.3"

# File system operations
walkdir = "2.3"
notify = "8.0"

# Configuration management
config = "0.15"
toml = "0.9"

# Development tools (optional)
cargo-license = { version = "0.7", optional = true }

[dev-dependencies]
# Testing
tokio-test = "0.4"
criterion = "0.7"
proptest = "1.3"

# Mocking
mockall = "0.13"

# Test utilities
tempfile = "3.8"
assert_fs = "1.1"

[build-dependencies]
prost-build = "0.14"
tonic-build = "0.14"

[features]
default = ["full"]
full = [
    "tokio/full",
    "reqwest/rustls-tls",
    "tracing-subscriber/env-filter",
    "cargo-license",
]
minimal = [
    "tokio/rt",
    "reqwest/json",
    "tracing-subscriber/fmt",
]

[profile.dev]
opt-level = 0
debug = true
strip = false

[profile.release]
opt-level = 3
debug = false
strip = true
lto = true
codegen-units = 1
panic = "abort"

[profile.release.package."*"]
opt-level = 3

[workspace]
members = ["."]
resolver = "2"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.release]
pre-release-commit-message = "chore: prepare for release {{version}}"
tag-message = "{{version}}"
tag-name = "{{version}}" 